<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_cameras"
        android:icon="@drawable/ic_camera"
        android:title="@string/nav_cameras" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_logs" />
    <item
        android:id="@+id/nav_devices"
        android:icon="@drawable/ic_devices"
        android:title="@string/nav_devices" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />
</menu>
